# National-space-hackathon

./: .gitignore  README.md  dockerfile  start.sh
.github/workflows/: main.yml
backend/: .dockerignore  .gitignore  dockerfile  iss_cargo.db  main.py  requirements.txt
backend/app/: app.py  config.py  database.py  inventory_data.csv  iss_cargo.db  main.py  models.py  models_api.py  models_db.py  requirements.txt  scriptss1.py
backend/app/api/: import_export.py  models_api_frontend.py  models_api_search.py  models_api_tables.py
backend/app/routes/: client_search_retrieve.py  client_simulation.py  client_tables.py  client_waste.py  get_placement_frontend.py  import_export.py  logs.py  placement.py  search_frontend.py  search_retrieve.py  simulation.py  waste.py
backend/app/services/: get_placement_frontend_service.py  import_export_service.py  logging_service.py  placement_service.py  retrieval_service.py  search_service_frontend.py  simulation_service.py  tables.py  waste_service.py
backend/app/utils/: geometry.py
backend/cpp_placement_service/: CMakeLists.txt
backend/cpp_placement_service/include/: placement_logic.h
backend/cpp_placement_service/src/: main.cpp  placement_logic.cpp
backend/generate-dataset/: generate-data.js  generate_container.py  generate_item.py  input_container.json  input_items.csv  input_items.json  iss_data.json  items.csv  package-lock.json  sample_data.py
frontend/: next.config.js  package-lock.json  package.json  tailwind.config.js
frontend/public/data/: containers.csv  items.csv
frontend/scripts/: prepare-data.js
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: ContainerView.tsx  (+13 more)
generate-dataset/: containers.csv  generate-data.js  package.json
(+33 files in other folders)
